# controllers/authentication.go
@@ -7,8 +7,6 @@ import (
 	"github.com/beego/beego/v2/core/logs"
 	beego "github.com/beego/beego/v2/server/web"
 	"golang.org/x/crypto/bcrypt"
-
-	"time"
 )
 
 // AuthenticationController operations for Authentication
@@ -18,18 +16,18 @@ type AuthenticationController struct {
 
 // URLMapping ...
 func (c *AuthenticationController) URLMapping() {
-	c.Mapping("Post", c.Post)
-	c.Mapping("SignUp", c.SignUp)
+	c.Mapping("Login", c.Login)
+	c.Mapping("VerifyOTP", c.VerifyOTP)
 }
 
 // Post ...
 // @Title Create
-// @Description create Authentication
+// @Description Login
 // @Param	body		body 	models.AuthenticationDTO	true		"body for Authentication content"
 // @Success 201 {object} models.UserResponseDTO
 // @Failure 403 body is empty
-// @router / [post]
-func (c *AuthenticationController) Post() {
+// @router /login [post]
+func (c *AuthenticationController) Login() {
 	var v models.AuthenticationDTO
 	json.Unmarshal(c.Ctx.Input.RequestBody, &v)
 
@@ -60,77 +58,49 @@ func (c *AuthenticationController) Post() {
 	c.ServeJSON()
 }
 
-// SignUp ...
-// @Title SignUp
-// @Description Sign up
-// @Param	body		body 	models.SignUpDTO	true		"body for SignUp content"
+// Verify OTP ...
+// @Title Verify OTP
+// @Description Login
+// @Param	body		body 	models.AuthenticationDTO	true		"body for Authentication content"
 // @Success 201 {object} models.UserResponseDTO
 // @Failure 403 body is empty
-// @router /sign-up [post]
-func (c *AuthenticationController) SignUp() {
-	var v models.SignUpDTO
+// @router /verify-otp [post]
+func (c *AuthenticationController) VerifyOTP() {
+	var v models.AuthenticationDTO
 	json.Unmarshal(c.Ctx.Input.RequestBody, &v)
-	logs.Info("Received ", v)
 
-	hashedPassword, errr := bcrypt.GenerateFromPassword([]byte(v.Password), 8)
+	logs.Info("Received OTP verification request: ", v.Password, v.Username)
 
-	if errr == nil {
-		logs.Debug(hashedPassword)
+	if a, err := models.GetUsersByUsername(v.Username); err == nil {
+		// Verify OTP
+		if uo, err := models.VerifyUserOTP(a.UserId); err == nil {
+			logs.Info("Returned OTP model is ", uo)
 
-		v.Password = string(hashedPassword)
-
-		logs.Debug("Sending", v.Password)
-
-		// models.Agents{AgentName: v.AgentName, BranchId: v.BranchId, IdType: v.IdType, IdNumber: v.IdNumber, IsVerified: false, Active: 1, DateCreated: time.Now(), DateModified: time.Now(), CreatedBy: c_by, ModifiedBy: c_by}
-	}
-
-	// Convert dob string to date
-	dobm, error := time.Parse("2006-01-02 15:04:05.000", v.Dob)
-
-	if error != nil {
-		logs.Error(error)
-
-		var resp = models.UserResponseDTO{StatusCode: 606, User: nil, StatusDesc: "Error adding user"}
-		c.Data["json"] = resp
-
-		// c.Data["json"] = error.Error()
-
-	} else {
-		// Assign dob
-		var addUserModel = models.Users{FullName: v.Name, Gender: v.Gender, Dob: dobm, Password: string(hashedPassword), Email: v.Email, DateCreated: time.Now(), Active: 1, CreatedBy: 1, ModifiedBy: 1}
-
-		if r, err := models.AddUsers(&addUserModel); err == nil {
-			c.Ctx.Output.SetStatus(201)
-
-			// logs.Debug("Returned user is", r)
-
-			// id, _ := strconv.ParseInt(idStr, 0, 64)
-			v, err := models.GetUsersById(r)
-
-			if err != nil {
+			// Compare the stored hashed password, with the hashed version of the password that was received
+			if err := bcrypt.CompareHashAndPassword([]byte(uo.OneTimePin), []byte(v.Password)); err != nil {
+				// If the two passwords don't match, return a 401 status
 				c.Data["json"] = err.Error()
 
 				logs.Error(err.Error())
 
-				var resp = models.UserResponseDTO{StatusCode: 601, User: nil, StatusDesc: "Error fetching user"}
+				var resp = models.UserResponseDTO{StatusCode: 605, User: nil, StatusDesc: "Incorrect password"}
 				c.Data["json"] = resp
+
 			} else {
-				logs.Debug("Returned user is", v)
+				c.Ctx.Output.SetStatus(201)
 
-				var resp = models.UserResponseDTO{StatusCode: 200, User: v, StatusDesc: "User created successfully"}
+				var resp = models.UserResponseDTO{StatusCode: 200, User: a, StatusDesc: "User OTP matches"}
 				c.Data["json"] = resp
-
-				// c.Data["json"] = v
 			}
 		} else {
 			logs.Error(err.Error())
-
-			var resp = models.UserResponseDTO{StatusCode: 606, User: nil, StatusDesc: "Error adding user"}
+			var resp = models.UserResponseDTO{StatusCode: 605, User: nil, StatusDesc: "No OTP found for this user"}
 			c.Data["json"] = resp
-
-			// c.Data["json"] = err.Error()
 		}
+	} else {
+		logs.Error(err.Error())
+		var resp = models.UserResponseDTO{StatusCode: 605, User: nil, StatusDesc: "Unidentified user"}
+		c.Data["json"] = resp
 	}
-
 	c.ServeJSON()
 }
